2008-12-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.12

2008-12-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client.c (mb_wm_client_get_transients): Patch
	from Laszlo to return the list in non-reversed order. Fixes: NB#93736

2008-12-15  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.11

2008-12-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_configure_real): Adjust the xmas hack:
	fetch texture for others but the systemui menu, to avoid the white
	window. This is not working perfectly yet if the size of the texture
	changes (size changes but the Clutter actor is not moved immediately).

	* matchbox/client-types/mb-wm-client-menu.c (mb_wm_client_menu_init):
	Do not force fixed-size for the menu window but only ensure minimum x
	and y coordinates to keep it away from the application title bar.
	Fixes: NB#95148

2008-12-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Update
	enum _HdWmClientType to match the definition in hildon-desktop code.

2008-12-12  Gordon Williams  <gordon.williams@collabora.co.uk>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	Fixed null dereference when get_nth_desktop is given
	a desktop number that doesn't exist. Tried to give
	windows a more obvious clutter name.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	  (mb_wm_comp_mgr_clutter_client_configure_real): Also fetch the
	  texture if it is the status area. (xmas workaround)

2008-12-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.10

2008-12-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-atoms.c: added MB_SECONDARY
	* matchbox/core/mb-wm-types.h: ditto
	* matchbox/core/mb-wm-props.[ch]: added mb_window_is_secondary()
	* matchbox/theme-engines/mb-wm-theme-png.c: if window is secondary,