@@ -1,3 +1,10 @@
+2009-01-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
+	(mb_wm_comp_mgr_clutter_client_repair_real): Optimisation for file
+	manager like applications. Update the whole bounding box if there are
+	three or more damaged areas. (The threshold value may need adjusting.)
+
 2008-12-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Release 0.2.12
